20230528 - Cambios de compatibilidad hacia atrás